<resources>
    <string name="app_name">Quoddit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email_signin">Enter Your Email</string>
    <string name="password_signin">Enter Your Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signup_signin">Need New Account? Sign Up</string>
    <string name="btn_signup_signup">Register</string>
    <string name="email_signup">E-Mail</string>
    <string name="password_signup">Password</string>
    <string name="btn_signin_signup">Already Have An Account? Sign In Here</string>
    <string name="username_signup">UserName</string>
    <string name="logout">LOGOUT</string>
    <string name="delete_account_btn_profile_frag">DELETE ACCOUNT</string>
    <string name="title_profile">Profile</string>
    <string name="profile_name">USERNAME</string>
    <string name="profilebio_tv">Profile Bio</string>
    <string name="editProfile">Edit Profile</string>
    <string name="error_value_required">Value is required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchUser">Search User</string>
    <string name="url_server">https://shumy.000webhostapp.com/api/</string>
    <string name="url_comments_readLatest">comments/readLatest.php</string>
    <string name="url_comment_create">comments/create.php</string>
</resources>
