<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <TextView
        android:id="@+id/profile_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="37dp"
        android:text="@string/profile_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profile_bio_tvt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_bio_tvt"
        android:layout_width="281dp"
        android:layout_height="88dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="15dp"
        android:text="@string/profilebio_tv"
        app:layout_constraintBottom_toTopOf="@+id/btn_editProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <Button
        android:id="@+id/btn_editProfile"
        android:layout_width="291dp"
        android:layout_height="39dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="300dp"
        android:text="@string/editProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_tvt"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
